[package]
name = "ahpc"
version = "1.2.0"
edition = "2021"
description = "AHP (Azure Http Proxy) Client - Rust implementation"
license = "MIT"
repository = "https://github.com/jason-luo/ahpc-rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
aes = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
strip = true
